--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,24 +2,119 @@
     <form action="" method="post" id="form">
         <h2 class="text-center">Registration</h2>
         <div class="input-group">
-            <label for="name">Nom et Prénom</label>
+            <label for="name">Nom et Prenom :  </label><br>
             <input type="text" name="name" id="name" placeholder="Nom et Prénom" required>
-        </div>
+        </div><br>
         <div class="input-group">
-            <label for="CIN">CIN</label>
-            <input type="text" name="CIN" id="CIN" placeholder="01234567" minlength="8" maxlength="8" required>
-        </div>
+            <label for="CIN">CIN :  </label><br>
+            <input type="text" name="CIN" id="CIN" placeholder="01234567" minlength="8" maxlength="8" required >
+        </div><br>
         <div class="input-group">
-            <label for="num_tel">Numéro de téléphone</label>
+            <label for="num_tel">Numero de telephone :   </label><br>
             <input type="text" name="num_tel" id="num_tel" placeholder="01234567" minlength="8" maxlength="8" required>
-        </div>
+        </div><br>
         <div class="input-group">
-            <label for="email">Email</label>
+            <label for="email">Email :  </label><br>
             <input type="email" name="email" id="email" placeholder="exemple@exp.com" required>
-        </div>
+        </div><br>
         <div class="input-group">
-            <label for="password">Mot de passe</label>
+            <label for="password">Mot de passe :  </label><br>
             <input type="password" id="mdp" name="password" placeholder="*********" required>
-        </div>
+        </div><br>
+        <button class=" btn btn-submit" type="submit" onclick="">Enregistrer</button>
     </form>
+
+    <script>
+    const form = document.querySelector('#form')
+    const name = document.querySelector(' name');
+    const email = document.querySelector('#email');
+    const password = document.querySelector('#password');
+    const CIN = document.querySelector('#CIN');
+    const numTel=document.querySelector('#num_tel') ;
+
+    form.addEventListener('submit',(e)=>{
+        
+        if(!validateInputs()){
+            e.preventDefault();
+        }
+    })
+
+    function validateInputs(){
+        const nameVal = name.value.trim()
+        const emailVal = email.value.trim();
+        const passwordVal = password.value.trim();
+        const numTelVal = numTel.value.trim();
+        const CINVal= CIN.value.trim();
+
+        let success = true
+
+        if(nameVal===''){
+            success=false;
+            setError (name,'Username is required')
+        }
+        else{
+            setSuccess (name)
+        }
+        if(isNaN(CINVal)){
+            success=false;
+            setError(CIN,'Invalid CIN Number')
+        }
+        else {
+            setSuccess(CIN);
+        }
+        if(isNaN(numTelVal)){
+            success=false;
+            setError(numTel,'Invalid Phone Number')
+        }
+        else {
+            setSuccess(numTel);
+        }        
+        if(emailVal===''){
+            success = false;
+            setError(email,'Email is required')
+        }
+        else if(!validateEmail(emailVal)){
+            success = false;
+            setError(email,'Please enter a valid email')
+        }
+        else{
+            setSuccess(email)
+        }
+
+        if(passwordVal === ''){
+            success= false;
+            setError(password,'Password is required')
+        }
+        else if(passwordVal.length<8){
+            success = false;
+            setError(password,'Password must be atleast 8 characters long')
+        }
+        else{
+            setSuccess(password)
+        }
+
+        if(cpasswordVal === ''){
+            success = false;
+            setError(cpassword,'Confirm password is required')
+        }
+        else if(cpasswordVal!==passwordVal){
+            success = false;
+            setError(cpassword,'Password does not match')
+        }
+        else{
+            setSuccess(cpassword)
+        }
+
+        return success;
+
+    }
+
+    const validateEmail = (email) => {
+        return String(email)
+        .toLowerCase()
+        .match(
+            /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
+        );
+};
+    </script>
 </div>
