--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <header>
     <div class="container">
-        <a href="#" routerLink="/" class="logo">Food!</a>
+        <img src="" alt="">
+        <a href="#" routerLink="/" class="Acceuil">Acceuil</a>
         <nav >
-            <ul>
-                <li>
-                    <a href="#" routerLink="/cart-page">Cart </a>
-                </li>
-            </ul>
+                <a href="#" routerLink="/pgProfile">Profil</a>
+                <a href="#" routerLink="">Terrain</a>
+                <a href="#" routerLink="">Info</a>
+                <a href="#" routerLink="">Contacter nous!</a>
         </nav>
     </div>
 </header>
