--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
     <div class="container">
         <img src="" alt="">
-        <a href="#" routerLink="/" class="Acceuil">Acceuil</a>
+        <a class="nav-link" href="" routerLink="/acceuil" class="Acceuil">Acceuil</a>
         <nav >
-                <a href="#" routerLink="/pgProfile">Profil</a>
+                <a href="" routerLink="/profil" class="Profil">Profil</a>
                 <a href="#" routerLink="">Terrain</a>
                 <a href="#" routerLink="">Info</a>
                 <a href="#" routerLink="">Contacter nous!</a>
