--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-acceuil></app-acceuil>
-<app-register></app-register>
+<router-outlet>
+    <app-acceuil></app-acceuil>
+</router-outlet>
