--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,12 @@
 <header>
     <div class="container">
         <img src="" alt="">
-        <a class="nav-link" href="" routerLink="/acceuil" class="Acceuil">Acceuil</a>
+        <a class="nav-link" routerLink="/acceuil" class="Acceuil">Acceuil</a>
         <nav >
-                <a href="" routerLink="/profil" class="Profil">Profil</a>
-                <a href="#" routerLink="">Terrain</a>
-                <a href="#" routerLink="">Info</a>
-                <a href="#" routerLink="">Contacter nous!</a>
+                <a routerLink="/profil" class="Profil">Profil</a>
+                <a routerLink="">Terrain</a>
+                <a routerLink="/">Info</a>
+                <a  routerLink="/">Contacter nous!</a>
         </nav>
     </div>
 </header>
-
