--- a/src/app/prop/prop.component.html
+++ b/src/app/prop/prop.component.html
@@ -1,1 +1,8 @@
-<p>prop works!</p>
+<div class="profile-container">
+    <img src="profile-picture.jpg" alt="Profile Picture" class="profile-picture">
+    <div class="profile-info">
+        <h2>John Doe</h2>
+        <p>Email: </p>
+        <p>Phone: +1234567890</p>
+    </div>
+</div>
