--- a/src/app/prop/prop.component.html
+++ b/src/app/prop/prop.component.html
@@ -1,8 +1,18 @@
-<div class="profile-container">
-    <img src="profile-picture.jpg" alt="Profile Picture" class="profile-picture">
-    <div class="profile-info">
-        <h2>John Doe</h2>
-        <p>Email: </p>
-        <p>Phone: +1234567890</p>
+<head>
+<title>Carte de profil</title>
+<link rel="stylesheet" type="text/css" href="./prop.component.css">
+</head>
+<body>
+
+<div class="carte">
+    <div class="profil">
+        <img src="C:\Users\user\Downloads\Plantech-master\Plantech-master\image.webp" alt="Photo de profil">
+    </div>
+    <div class="info">
+        <p>Nom Prénom</p>
+        <p>Email : example@example.com</p>
+        <p>Téléphone : +123456789</p>
     </div>
 </div>
+
+</body>
