--- a/src/app/prop/prop.component.css
+++ b/src/app/prop/prop.component.css
@@ -1,30 +1,30 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 20;
     padding: 0;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     height: 100vh;
     background-color: #f0f0f0;
 }
-.profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+    .carte {
+    background-color: #75c94a;
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.profile-picture {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 300px;
+    float: left; 
+    justify-content: left;
+    }
+    
+    .profil {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 20px;
-}
-.profile-info {
-    text-align: center;
-    margin-bottom: 20px;
-}
+    }
+
+    .info {
+    color: #fff;
+    }
