--- a/src/app/prop/prop.component.html
+++ b/src/app/prop/prop.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="info">
         <p>Nom Prénom</p>
-        <p>Email : example@example.com</p>
+        <p>Email : exampleexample.com</p>
         <p>Téléphone : +123456789</p>
     </div>
 </div>
