--- a/src/app/authentification/authentification.component.html
+++ b/src/app/authentification/authentification.component.html
@@ -29,15 +29,11 @@
                         </div>
                         </form>
                     <br>
-                        <p class="signup-link" style="text-align: center;">Vous n'aver pas de compte? <a href="#">S'inscrire</a></p>
+                        <p class="signup-link" style="text-align: center;">Vous n'aver pas de compte? <a href="/authentification" routerLink="/authentification" routerLinkActive="active">S'inscrire</a></p>
                     </div>
-                    <div class="col-md-6">
-                        <h3>Déverrouillez <br>la location de <br>paysages en toute <br> simplicité</h3>
-                        <br><br>
-                        <img src="./ph1.png" alt="im1" class="rounded" width="600">
+                
                     </div>
                 </div>
-            </div>
         </section>
     </main>
 </body>
