--- a/src/app/prop/prop.component.html
+++ b/src/app/prop/prop.component.html
@@ -11,7 +11,7 @@
     <div class="info">
         <p>Nom Prénom</p>
         <p>Email : exampleexample.com</p>
-        <p>Téléphone : +123456789</p>
+        <p>Téléphone : 12345678</p>
     </div>
 </div>
 
