--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -59,7 +59,7 @@
 </form>
 </div></div>
 <br><br><br>
-<p class="signup-link" style="text-align: center;">Vous n'avez pas de compte? <a href="#">S'inscrire</a></p>
+<p class="signup-link" style="text-align: center;">Vous n'avez pas de compte? <a href="/authentification" routerLink="/authentification" routerLinkActive="active">S'inscrire</a></p>
 
     <script>
     const form = document.querySelector('#form')
