--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -3,7 +3,7 @@
     <br><br><br><br><br><br>
     <p class="custom-paragraph">Bienvenue chez Plantech : Votre passerelle vers des <br>opportunites illimitees</p><br><br><br><br><br><br>
     <h1  class="custom-heading">PLANTECH</h1><br><br><br><br><br><br>
-    <a href="/register"> Inscrivez-vous ici</a>
+    <a href="/authentification"> Se connecter</a>
     
 <!--<button id="registrationbutton" type="button" class="custom-button" onclick="navigateToRegister()">Inscrivez-vous ici</button>-->
 </div>
