--- a/src/app/authentification/authentification.component.html
+++ b/src/app/authentification/authentification.component.html
@@ -29,7 +29,7 @@
                         </div>
                         </form>
                     <br>
-                        <p class="signup-link" style="text-align: center;">Vous n'aver pas de compte? <a href="/authentification" routerLink="/authentification" routerLinkActive="active">S'inscrire</a></p>
+                        <p class="signup-link" style="text-align: center;">Vous n'aver pas de compte? <a href="/register" routerLink="/register" routerLinkActive="active">S'inscrire</a></p>
                     </div>
                 
                     </div>
