--- a/src/app/prop/prop.component.html
+++ b/src/app/prop/prop.component.html
@@ -6,7 +6,7 @@
 
 <div class="carte">
     <div class="profil">
-        <img src="C:\Users\user\Downloads\Plantech-master\Plantech-master\image.webp" alt="Photo de profil">
+        <img src="../assets/images/istockphoto-1495088043-612x612.jpg" alt="Photo de profil">
     </div>
     <div class="info">
         <p>Nom Prénom</p>
