--- a/src/app/ajouterterrain/ajouterterrain.component.html
+++ b/src/app/ajouterterrain/ajouterterrain.component.html
@@ -22,21 +22,21 @@
                 <div class="col-4">
                     <div class="form-group">
                         <label for="num_tel">Dimention :  </label><br>
-            <input type="text" name="num_tel" id="num_tel" placeholder="01234567" minlength="8" maxlength="8" required style="background-color: #C5F4C1;">
+            <input type="text" name="num_tel" id="num_tel" placeholder="00x00" minlength="8" maxlength="8" required style="background-color: #C5F4C1;">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
                     <div class="form-group">
-                        <label for="email" >Prix:  </label><br>
-            <input type="email" name="email" id="email" placeholder="exemple@exp.com" required style="background-color: #C5F4C1;">
+                        <label for="Prix" >Prix:  </label><br>
+            <input type="Prix" name="Prix" id="Prix" required style="background-color: #C5F4C1;">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="form-group">
-                        <label for="password" >Disponibilite :</label><br>
-            <input type="password" id="mdp" name="password" placeholder="*********" required style="background-color: #C5F4C1;">
+                        <label for="password" >Disponibilite :</label>
+            <input type=checkbox id="Disponibilite" name="Disponibilite"  required style="background-color: #C5F4C1;">
                     </div>
                 </div>
                 <div class="col-4">
@@ -46,5 +46,5 @@
                 <div class="col-md-6 offset-md-3">
             <div class="container d-grid" >
                 <button type="button" class="btn btn-success btn-block" >Ajouter un Terrain</button>
-            </div> </div>  </div><br><br>
+            </div></div>  </div><br><br>
 </form>
