--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
                 <a href="/profile" routerLink="/profil" routerLinkActive="active" class="Profil">Profil</a>
                 <a href="/terrain" routerLink="">Terrain</a>
                 <a href="/acceuil" routerLink="/">Info</a>
-                <a  routerLink="/">Contacter nous!</a>
+                <a  routerLink="/acceuil">Contacter nous!</a>
         </nav>
     </div>
 </header>
