--- a/src/app/prop/prop.component.html
+++ b/src/app/prop/prop.component.html
@@ -1,18 +1,24 @@
+
 <head>
-<title>Carte de profil</title>
-<link rel="stylesheet" type="text/css" href="./prop.component.css">
+    <link rel="stylesheet" href="./prop.component.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #f4f9f3;">
 
-<div class="carte">
-    <div class="profil">
-        <img src="C:\Users\user\Downloads\Plantech-master\Plantech-master\image.webp" alt="Photo de profil">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="card" style="background-color: #D6FFD5;">
+                    <img class="card-img-top rounded-circle mx-auto mt-3" style="max-width: 50%; max-height: 30%;" src="./profile.jpg" alt="Photo de profil">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Nom Prenom</h5>
+                        <p class="card-text">Email: exampleexample.com</p>
+                        <p class="card-text">Telephone: 12345678</p>
+                    </div>
+                </div>
+            </div> 
+        </div>  
     </div>
-    <div class="info">
-        <p>Nom Prénom</p>
-        <p>Email : exampleexample.com</p>
-        <p>Téléphone : 12345678</p>
-    </div>
-</div>
-
+    
 </body>
+
