--- a/src/app/prop/prop.component.css
+++ b/src/app/prop/prop.component.css
@@ -1,30 +1,19 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20;
-    padding: 0;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-}
 
-    .carte {
-    background-color: #75c94a;
-    padding: 20px;
-    border-radius: 10px;
+.card {
     width: 300px;
-    float: left; 
-    justify-content: left;
-    }
-    
-    .profil {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 20px;
     margin-bottom: 20px;
-    }
-
-    .info {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    height: 200%;
+}
+.add-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
     color: #fff;
-    }
+    font-size: 16px;
+    cursor: pointer;
+}
