--- a/src/app/ajouterterrain/ajouterterrain.component.html
+++ b/src/app/ajouterterrain/ajouterterrain.component.html
@@ -1,4 +1,8 @@
 <body>
+
+    <div *ngIf="errors!=''">
+        {{errors}}
+    </div>
     <section class="hero" style="background-color: #F4F9F3;">
         <div >
             <div class="row">
@@ -10,19 +14,19 @@
                 <div class="col-4">
                     <div class="form-group">
                         <label for="NomTerrain">Nom Terrain : </label><br>
-                        <input type="text" name="name" id="NomTerrain" placeholder="Nom de votre terrain" required  style="background-color: #C5F4C1;">
+                        <input  type="text" name="NomTerrain" id="NomTerrain" placeholder="Nom de votre terrain" required  style="background-color: #C5F4C1;" [(ngModel)]="t.NomTerrain">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="form-group">
                         <label for="CIN" >Localisation :</label><br>
-            <input type="text" name="CIN" id="Localisation" placeholder="Inserer les coordonnees" required style="background-color: #C5F4C1;" >
+            <input type="text" name="CIN" id="Localisation" placeholder="Inserer les coordonnees" required style="background-color: #C5F4C1;"  [(ngModel)]="t.Localisation">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="form-group">
-                        <label for="num_tel">Dimention :  </label><br>
-            <input type="text" name="num_tel" id="num_tel" placeholder="00x00" minlength="8" maxlength="8" required style="background-color: #C5F4C1;">
+                        <label for="Dimention">Dimention :  </label><br>
+            <input type="text" name="Dimention" id="Dimention" placeholder="00x00" minlength="8" maxlength="8" required style="background-color: #C5F4C1;" [(ngModel)]="t.Dimention">
                     </div>
                 </div>
             </div>
@@ -30,13 +34,13 @@
                 <div class="col-4">
                     <div class="form-group">
                         <label for="Prix" >Prix:  </label><br>
-            <input type="Prix" name="Prix" id="Prix" required style="background-color: #C5F4C1;">
+            <input type="Prix" name="Prix" id="Prix" required style="background-color: #C5F4C1;" [(ngModel)]="t.Prix">
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="form-group">
-                        <label for="password" >Disponibilite :</label>
-            <input type=checkbox id="Disponibilite" name="Disponibilite"  required style="background-color: #C5F4C1;">
+                        <label for="Disponibilite" >Disponibilite :</label>
+            <input type=checkbox id="Disponibilite" name="Disponibilite"  required style="background-color: #C5F4C1;" [(ngModel)]="t.Disponibilite">
                     </div>
                 </div>
                 <div class="col-4">
@@ -45,6 +49,6 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3">
             <div class="container d-grid" >
-                <button type="button" class="btn btn-success btn-block" >Ajouter un Terrain</button>
+                <button type="button" class="btn btn-success" (click)="ajouterterrain()" >Ajouter un Terrain</button>
             </div></div>  </div><br><br>
 </form>
