--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,9 @@
         <a class="nav-link" href="/acceuil" routerLink="/acceuil" routerLinkActive="active"  class="Acceuil">Acceuil</a>
         <nav >
                 <a href="/profile" routerLink="/profil" routerLinkActive="active" class="Profil">Profil</a>
-                <a href="/terrain" routerLink="">Terrain</a>
-                <a href="/acceuil" routerLink="/">Info</a>
+                <a href="/terrain" routerLink="/terrain">Terrain</a>
+                <a href="/acceuil" routerLink="/acceuil">Info</a>
                 <a  routerLink="/acceuil">Contacter nous!</a>
         </nav>
     </div>
-    <router-outlet></router-outlet>
 </header>
